refactor ArithmeticCalculator getSearch collect(Collectors.toList()); -> toList();